--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.18)
 
 add_definitions(-DCURRENCYCONVERTER_GUI_LIBRARY)
-set(CURRENT_PROJECT "CurrencyConverterGui")
+set(CURRENT_PROJECT "${PROJECT_NAME}Gui")
 
 file(GLOB SOURCE_APP
     "*CurrencyConverterGui/*.cpp"
@@ -29,11 +29,28 @@ add_library(${CURRENT_PROJECT} ${SOURCE_APP} ${SOURCE_QRC})
 
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Quick LinguistTools Gui Qml REQUIRED)
 
-target_link_libraries(${CURRENT_PROJECT} PUBLIC ${PROJECT_NAME}Core
-                                                Qt${QT_VERSION_MAJOR}::Quick
-                                                Qt${QT_VERSION_MAJOR}::Gui
-                                                Qt${QT_VERSION_MAJOR}::Qml
-                                                )
+target_link_libraries(${CURRENT_PROJECT}
+                PUBLIC
+                "${PROJECT_NAME}Core"
+                Qt${QT_VERSION_MAJOR}::Quick
+                Qt${QT_VERSION_MAJOR}::Gui
+                Qt${QT_VERSION_MAJOR}::Qml
+)
+
+set(TS_FILES "translations/translations_en.ts"
+             "translations/translations_ru.ts"
+             "translations/translations_fr.ts"
+             "translations/translations_sp.ts"
+             "translations/translations_it.ts"
+             "translations/translations_ua.ts"
+)
+
+qt6_add_lupdate(${CURRENT_PROJECT}
+    RESOURCE_PREFIX "/i18n"
+    TS_FILES ${TS_FILES}
+)
 
 target_include_directories(${CURRENT_PROJECT} PUBLIC ${PUBLIC_INCLUDE_DIR})
 target_include_directories(${CURRENT_PROJECT} PRIVATE ${PRIVATE_INCLUDE_DIR})
+
+
