--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -56,6 +56,21 @@ qt6_add_lupdate("${CMAKE_PROJECT_NAME}"
 
 qt6_add_lrelease(TS_FILES ${TS_FILES})
 
+list(APPEND QML_FILES "CurrencyConverterModules/Common/Theme.qml"
+                      "CurrencyConverterModules/Common/Constants.qml"
+)
+
+set_source_files_properties(${QML_FILES} PROPERTIES
+    QT_QML_SINGLETON_TYPE TRUE
+)
+
+qt6_add_qml_module(${CURRENT_PROJECT}
+    URI "Gui"
+    PLUGIN_TARGET ${CURRENT_PROJECT}
+    VERSION 1.0
+    QML_FILES ${QML_FILES}
+)
+
 target_include_directories(${CURRENT_PROJECT} PUBLIC ${PUBLIC_INCLUDE_DIR})
 target_include_directories(${CURRENT_PROJECT} PRIVATE ${PRIVATE_INCLUDE_DIR})
 
