There was added app icon

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,8 @@ else()
     message("The ${PROJECT_NAME} tests is disabled")
 endif()
 
+message("${MACOSX_BUNDLE} 1")
+
 set_target_properties("${PROJECT_NAME}" PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER com.master.CurrencyConverter
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
