There was fixed bug with app icon

--- a/src/App/CMakeLists.txt
+++ b/src/App/CMakeLists.txt
@@ -19,7 +19,7 @@ set(PRIVATE_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Private")
 
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Network Concurrent QUIET)
 
-set(MACOSX_BUNDLE_ICON_FILE AppIcon.icns)
+#set()
 
 set(app_icon_macos "${CMAKE_CURRENT_SOURCE_DIR}/apple/Assets.xcassets/AppIcon.icns")
 
@@ -42,6 +42,15 @@ set(TARGET_DIR "${CMAKE_SOURCE_DIR}/Deploy")
 file(MAKE_DIRECTORY ${TARGET_DIR})
 
 qt_standard_project_setup(REQUIRES 6.5)
+
+set_target_properties("${PROJECT_NAME}" PROPERTIES
+    MACOSX_BUNDLE_GUI_IDENTIFIER com.master.CurrencyConverter
+    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
+    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
+    MACOSX_BUNDLE TRUE
+    MACOSX_BUNDLE_ICON_FILE AppIcon.icns
+    RESOURCE ${app_icon_macos}
+)
 
 # if(IOS)
 #     set_target_properties(${CURRENT_PROJECT} PROPERTIES
