There were refactored code added currencies models, interfaces

--- a/src/Core/CMakeLists.txt
+++ b/src/Core/CMakeLists.txt
@@ -7,11 +7,11 @@ set(CURRENT_PROJECT "${PROJECT_NAME}${CURRENT_PROJECT_DIR}")
 
 file(GLOB SOURCE_APP
     "public/*.h"
-    "public/CurrencyConverter/*.h"
+    "public/CurrencyConverter/utility/*.h"
     "private/*.h"
 
     "public/*.cpp"
-    "public/CurrencyConverter/*.cpp"
+    "public/CurrencyConverter/utility/*.cpp"
     "private/*.cpp"
 )
 
@@ -26,9 +26,9 @@ set(PRIVATE_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/private")
 
 add_library(${CURRENT_PROJECT} ${SOURCE_APP} ${SOURCE_QRC})
 
-find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core REQUIRED)
+find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Network Concurrent  Core REQUIRED)
 
-target_link_libraries(${CURRENT_PROJECT} PRIVATE Qt${QT_VERSION_MAJOR}::Core)
+target_link_libraries(${CURRENT_PROJECT} PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Network)
 
 target_include_directories(${CURRENT_PROJECT} PUBLIC ${PUBLIC_INCLUDE_DIR})
 target_include_directories(${CURRENT_PROJECT} PRIVATE ${PRIVATE_INCLUDE_DIR})
