There were fixed bugs and removed test

--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -22,6 +22,7 @@ if(${QT_VERSION_MAJOR})
         "CurrencyConverterModules/*.qml"
         "CurrencyConverterModules/Common/*.qml"
         "CurrencyConverterModules/Components/*.qml"
+        "CurrencyConverterModules/Dialogs/*.qml"
     )
 endif()
 
